# quantnn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
heap/: dynamic_quant  massif.out.126011  static_quant
pytorch/: save_mobilenet_v3.py  save_mobileone.py  test_mobileone.py  train_convnet.py  train_fc.py
pytorch/mnist_fc/: mnist_fc.ncnn.param  mnist_fc.onnx  mnist_fc.pnnx.onnx  mnist_fc.pnnx.param  mnist_fc.pnnxsim.onnx  mnist_fc_ncnn.py  mnist_fc_pnnx.py
src/: data_7.h  main.cpp  mnist_fc.h
src/conv/dynamic_quantization/: inference.cpp  quantize_weight.cpp  quantized_conv1.h  quantized_fc1.h  quantized_fc2.h
src/conv/static_quantization/: calibrate.cpp  calibration.cpp  inference.cpp  mnist_conv_bias.h  quantized_fc2.h
src/dynamic_quantization/: inference_int8.cpp  quantize_weight.cpp
src/fp32/: data_7.h  mnist_conv.cpp  mnist_fc.cpp
src/mlp/dynamic_quantization/: quantize_weight.cpp
src/mlp/fp32/: mnist_fc.h
src/mlp/static_quantization/: prepare_calibration_data.py  quantized_fc1.h
src/static_quantization/: calibration.cpp  inference_int8.cpp
src/weight_fp32_to_int8/: convert.cpp  inference_int8.cpp  quantized_fc2.h
